Bumped GDX and Gradle. Supports java 11 now