@@ -5,8 +5,6 @@ import com.badlogic.gdx.audio.Music;
 import com.badlogic.gdx.maps.tiled.TiledMap;
 import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.math.Vector2;
-import com.google.common.collect.ImmutableList;
-import pojahn.game.core.BaseLogic;
 import pojahn.game.core.Entity;
 import pojahn.game.core.MobileEntity;
 import pojahn.game.core.PlayableEntity;
@@ -22,7 +20,6 @@ import pojahn.game.entities.movement.EarthDrone;
 import pojahn.game.entities.movement.PathDrone;
 import pojahn.game.entities.object.Collectable;
 import pojahn.game.entities.object.Wind;
-import pojahn.game.entities.particle.Debris;
 import pojahn.game.entities.particle.EntityExplosion;
 import pojahn.game.entities.particle.Particle;
 import pojahn.game.entities.platform.EarthSolidPlatform;
@@ -383,7 +380,7 @@ public class FlyingBattery extends TileBasedLevel {
                 discard(clonie);
                 clonie.sounds.play(res.getSound("block_collapse.wav"));
 
-                final List<Animation<Image2D>> debrisImages = ImmutableList.of(
+                final List<Animation<Image2D>> debrisImages = List.of(
                     new Animation<Image2D>(3, res.getImage("part1.png")),
                     new Animation<Image2D>(3, res.getImage("part2.png")),
                     new Animation<Image2D>(3, res.getImage("part3.png")),
